[FIX] web_editor: fix horizontal grid padding in mobile view
When a snippet is in grid mode, the grid items horizontal padding can be
modified with the "Padding (Y, X)" option. When we are in mobile view,
the display is back to `flex`, in order for the layout to look like the
snippets in normal mode.

However, while the normal mode columns all have the same padding, which
depends on the `--gutter-x` CSS variable, the grid items still keep the
horizontal grid padding, making them misaligned with the other contents.

This commit fixes this issue by blocking the horizontal grid padding in
mobile view.

This commit also moves the rule added in commit [1], which is used to
compensate the margins of the first row inside a grid item, and replaces
it by its more simple form from commit [2], which only compensates the
margins of direct children rows. Indeed, now that the padding is not
variable in mobile view, this rule is only needed in desktop view, and
the situation for which the rule was targetting the first row and not
only a direct child does not happen anymore.

[1]: https://github.com/odoo/odoo/commit/db1896f6ec16a5d5fc2164179728d221f8703dc6
[2]: https://github.com/odoo/odoo/commit/d7c2f8b4a3535f5c15043226a296d10be4208cec

task-4194685

X-original-commit: ce1a9d57a3496a2fb05efa7c68ea1651dfcbf565

--- a/addons/web_editor/static/src/scss/web_editor.frontend.scss
+++ b/addons/web_editor/static/src/scss/web_editor.frontend.scss
@@ -54,18 +54,11 @@
 
     > * {
         padding: var(--grid-item-padding-y) var(--grid-item-padding-x) !important;
-    }
 
-    // Adapt the horizontal margins of the first inner row of a grid item, to
-    // make them compensate the grid item horizontal padding (to avoid an
-    // overflow).
-    .o_grid_item .row {
-        --grid-inner-row-gutter-x: clamp(0px, 2 * var(--grid-item-padding-x), 30px);
-        margin-left: calc(-0.5 * var(--grid-inner-row-gutter-x));
-        margin-right: calc(-0.5 * var(--grid-inner-row-gutter-x));
-
-        .row {
-            --grid-inner-row-gutter-x: var(--gutter-x);
+        @include media-breakpoint-down(lg) {
+            // Force the horizontal padding to 15px in mobile view, to be
+            // consistent with the normal mode.
+            padding: var(--grid-item-padding-y) calc(0.5 * var(--gutter-x)) !important;
         }
     }
 }
@@ -79,6 +72,15 @@
         column-gap: 0px;
 
         --gutter-x: 0px;
+
+        // Adapt the horizontal margins of a direct row child of a grid item, to
+        // make them compensate the grid item horizontal padding (to avoid an
+        // overflow).
+        .o_grid_item > .row {
+            --grid-inner-row-gutter-x: clamp(0px, 2 * var(--grid-item-padding-x), 30px);
+            margin-left: calc(-0.5 * var(--grid-inner-row-gutter-x));
+            margin-right: calc(-0.5 * var(--grid-inner-row-gutter-x));
+        }
 
         > * {
             margin: 0 !important;
